--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@
 Manfred Touron <94029+moul@users.noreply.github.com>
 moul-bot <bot@moul.io>
 Renovate Bot <bot@renovateapp.com>
+j-edgizer <119296151+j-edgizer@users.noreply.github.com>
